examples/neg/ParallelAssignment-Neg6.iml
// missmatch quantity of lvalues
program parallelAssignmentNeg1()
global
  var i1: int64;
  var i2: int64;
  var b1: bool;
  var b2: bool
do
  i1 init, i2 init, b1 init := 1 , 2, true, flase
endprogram
